# open-reckless-drivin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  build.zig.zon  project.mcp
c/: CMakeLists.txt  Makefile
c/scripts/: convert.py  generate-code.py
c/src/: error.c  gameendseq.c  gameinitexit.c  input.c  main.c  objectPhysics.c  objects.c  packs.c  pause.c  quickdraw.c  random.c  register.c  renderframe.c  renderframezoom.c  resource.c  rle.c  roaddraw.c  screen.c  screenfx.c  sprites.c  textfx.c  trig.c
c/src/include/: defines.h  error.h  gamesounds.h  high.h  interface.h  objectcontrol.h  packs.h  quickdraw.h  resource.h  screen.h  screenfx.h  sprites.h  trig.h
c/tests/: decryption_test.c  prefs-test.ini  resource_test.c
headers/: defines.h  error.h  gameframe.h  gameinitexit.h  gamesounds.h  high.h  initexit.h  input.h  interface.h  objectcontrol.h  objects.h  packs.h  particlefx.h  preferences.h  quickdraw.h  random.h  register.h  renderframe.h  resource.h  rle.h  roads.h  screen.h  screenfx.h  sprites.h  textfx.h  trig.h  vec2d.h
source/: HIDAccess.c  IsPortListValid.c  appleevents.c  error.c  gameendseq.c  gameframe.c  gameinitexit.c  high.c  initexit.c  input.c  interface.c  lzrw3.c  main.c  objectCollision.c  objectControl.c  objectPhysics.c  objects.c  packs.c  particlefx.c  pause.c  preferences.c  quickdraw.c  random.c  register.c  renderframe.c  renderframezoom.c  resource.c  rle.c  roaddraw.c  screen.c  screenfx.c  sound.c  sprites.c  textfx.c
src/: CMakeLists.txt  IsPortListValid.c  appleevents.c  g.zig  game.zig  gameframe.c  gameinitexit.c  high.c  initexit.c  input.c  interface.c  level.zig  levels.zig  lzrw.c  lzrw.zig  lzrw3-a.c  main.c  main.zig  objectCollision.c  objectControl.c  objects.c  objects.zig  packs.c  packs.zig  particle.zig  particlefx.c  point.zig  preferences.c  preferences.zig  quickdraw.c  quickdraw.zig  random.c  random.zig  raylib.zig  register.c  render.zig  renderframe.c  renderframezoom.c  resource.c  resources.zig  (+11 more)
src/c/: lzrw.c  lzrw.h
src/include/: defines.h  gameframe.h  initexit.h  interface.h  lzrw.h  objectcontrol.h  objects.h  packs.h  preferences.h  register.h  resource.h  rle.h  trig.h  vec2d.h
tests/: CMakeLists.txt  crypt_test.c  decryption_test.c  lzrw_test.c  lzrwmain.c  preference-test.c  quickdraw_test.c  resource_test.c  sprites_test.c
